--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "dependencies": {
     "hjs-webpack": "^8.3.0",
+    "jquery": "^3.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
